--- a/contact.html
+++ b/contact.html
@@ -132,7 +132,7 @@
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand" href="index.html"><img src="assets/img/new/JG-removebg-preview.png" alt=""></span></a>
+      <a class="navbar-brand text-brand" href="index.html"><span class="bg-dark text-light px-4 py-2 rounded-pill">Nova Constractions</span></span></a>
 
       <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
         <ul class="navbar-nav">
@@ -177,7 +177,7 @@
           <div class="col-md-12 col-lg-8">
             <div class="title-single-box">
               <h1 class="title-single">Contact US</h1>
-              <span class="color-text-a">Specialisation on Carpentry, Timber Frames, and Renovations at a competitive price has earned JG Construction an esteemed position within the industry and high satisfaction rate among the clients for more than 15 years now!</span>
+              <span class="color-text-a">Specialisation on Carpentry, Timber Frames, and Renovations at a competitive price has earned nova Construction an esteemed position within the industry and high satisfaction rate among the clients for more than 15 years now!</span>
             </div>
           </div>
           <div class="col-md-12 col-lg-4">
@@ -257,7 +257,7 @@
                     </div>
                     <div class="icon-box-content">
                       <p class="mb-1">Email.
-                        <span class="color-a">info@jgcontructionuk.co.uk</span>
+                        <span class="color-a">info@novacontructionuk.co.uk</span>
                       </p>
                       <p class="mb-1">Phone.
                         <span class="color-a">01245 967220</span>
@@ -294,7 +294,7 @@
                       <div class="socials-footer">
                         <ul class="list-inline">
                           <li class="list-inline-item">
-                            <a target="blank" href="https://www.facebook.com/JGConstructionUKLtd/" class="link-one">
+                            <a target="blank" href="https://www.facebook.com/novaConstructionUKLtd/" class="link-one">
                               <i class="bi bi-facebook" aria-hidden="true"></i>
                             </a>
                           </li>
@@ -304,12 +304,12 @@
                             </a>
                           </li>
                           <li class="list-inline-item">
-                            <a target="blank" href="https://www.instagram.com/jgconstructionukltd/" class="link-one">
+                            <a target="blank" href="https://www.instagram.com/novaconstructionukltd/" class="link-one">
                               <i class="bi bi-instagram" aria-hidden="true"></i>
                             </a>
                           </li>
                           <li class="list-inline-item">
-                            <a target="blank" href="https://www.linkedin.com/company/jg-construction-uk-ltd/" class="link-one">
+                            <a target="blank" href="https://www.linkedin.com/company/nova-construction-uk-ltd/" class="link-one">
                               <i class="bi bi-linkedin" aria-hidden="true"></i>
                             </a>
                           </li>
@@ -334,7 +334,7 @@
         <div class="col-sm-12 col-md-4">
           <div class="widget-a">
             <div class="w-header-a">
-              <h3 class="w-title-a text-brand">JG Constraction UK</h3>
+              <h3 class="w-title-a text-brand">Nova Constructions</h3>
             </div>
             <div class="w-body-a">
               <p class="w-text-a color-text-a">
@@ -347,7 +347,7 @@
                   <span class="color-text-a">Phone .</span> 01245 967220
                 </li>
                 <li class="color-a">
-                  <span class="color-text-a">Email .</span> info@jgcontructionuk.co.uk
+                  <span class="color-text-a">Email .</span> info@novacontructionuk.co.uk
                 </li>
               </ul>
             </div>
@@ -421,7 +421,7 @@
           <div class="socials-a">
             <ul class="list-inline">
               <li class="list-inline-item">
-                <a target="blank" href="https://www.facebook.com/JGConstructionUKLtd/">
+                <a target="blank" href="https://www.facebook.com/novaConstructionUKLtd/">
                   <i class="bi bi-facebook" aria-hidden="true"></i>
                 </a>
               </li>
@@ -445,12 +445,12 @@
           <div class="copyright-footer">
             <p class="copyright color-text-a">
               &copy; Copyright
-              <span class="color-a">JG Constraction UK</span> All Rights Reserved.
+              <span class="color-a">Nova Constructions</span> All Rights Reserved.
             </p>
           </div>
           <div class="credits">
            
-            Designed by <a target="blank" href="https://codingwallet.co.uk/">coding Wallet</a>
+            Designed by <a target="blank" href="https://www.facebook.com/mozahid34/">Mozahid</a>
           </div>
         </div>
       </div>
