--- a/property-single.html
+++ b/property-single.html
@@ -132,7 +132,7 @@
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand" href="index.html"><img src="assets/img/new/JG-removebg-preview.png" alt=""></span></a>
+      <a class="navbar-brand text-brand" href="index.html"><span class="bg-dark text-light px-4 py-2 rounded-pill">Nova Constractions</span></span></a>
 
       <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
         <ul class="navbar-nav">
@@ -455,7 +455,7 @@
         <div class="col-sm-12 col-md-4">
           <div class="widget-a">
             <div class="w-header-a">
-              <h3 class="w-title-a text-brand">JG Constraction UK</h3>
+              <h3 class="w-title-a text-brand">Nova Constractions</h3>
             </div>
             <div class="w-body-a">
               <p class="w-text-a color-text-a">
@@ -542,7 +542,7 @@
           <div class="socials-a">
             <ul class="list-inline">
               <li class="list-inline-item">
-                <a target="blank" href="https://www.facebook.com/JGConstructionUKLtd/">
+                <a target="blank" href="https://www.facebook.com/NovaConstructionUKLtd/">
                   <i class="bi bi-facebook" aria-hidden="true"></i>
                 </a>
               </li>
@@ -566,12 +566,12 @@
           <div class="copyright-footer">
             <p class="copyright color-text-a">
               &copy; Copyright
-              <span class="color-a">JG Constraction UK</span> All Rights Reserved.
+              <span class="color-a">Nova Constractions</span> All Rights Reserved.
             </p>
           </div>
           <div class="credits">
            
-            Designed by <a target="blank" href="https://codingwallet.co.uk/">coding Wallet</a>
+            Designed by <a target="blank" href="https://www.facebook.com/mozahid34/">Mozahid</a>
           </div>
         </div>
       </div>
