--- a/agents-grid.html
+++ b/agents-grid.html
@@ -129,7 +129,7 @@
         <span></span>
         <span></span>
       </button>
-      <a class="navbar-brand text-brand" href="index.html"><img src="assets/img/new/JG-removebg-preview.png" alt=""></span></a>
+      <a class="navbar-brand text-brand" href="index.html"><span class="bg-dark text-light px-4 py-2 rounded-pill">Nova Constractions</span></span></a>
 
       <div class="navbar-collapse collapse justify-content-center" id="navbarDefault">
         <ul class="navbar-nav">
@@ -572,7 +572,7 @@
         <div class="col-sm-12 col-md-4">
           <div class="widget-a">
             <div class="w-header-a">
-              <h3 class="w-title-a text-brand">JG Constraction UK</h3>
+              <h3 class="w-title-a text-brand">Nova Constractions</h3>
             </div>
             <div class="w-body-a">
               <p class="w-text-a color-text-a">
@@ -585,7 +585,7 @@
                   <span class="color-text-a">Phone .</span> 01245 967220
                 </li>
                 <li class="color-a">
-                  <span class="color-text-a">Email .</span> info@jgcontructionuk.co.uk
+                  <span class="color-text-a">Email .</span> info@novacontructionuk.co.uk
                 </li>
               </ul>
             </div>
@@ -659,7 +659,7 @@
           <div class="socials-a">
             <ul class="list-inline">
               <li class="list-inline-item">
-                <a target="blank" href="https://www.facebook.com/JGConstructionUKLtd/">
+                <a target="blank" href="https://www.facebook.com/novaConstructionUKLtd/">
                   <i class="bi bi-facebook" aria-hidden="true"></i>
                 </a>
               </li>
@@ -683,12 +683,12 @@
           <div class="copyright-footer">
             <p class="copyright color-text-a">
               &copy; Copyright
-              <span class="color-a">JG Constraction UK</span> All Rights Reserved.
+              <span class="color-a">Nova Constractions</span> All Rights Reserved.
             </p>
           </div>
           <div class="credits">
            
-            Designed by <a target="blank" href="https://codingwallet.co.uk/">coding Wallet</a>
+            Designed by <a target="blank" href="https://www.facebook.com/mozahid34/">Mozahid</a>
           </div>
         </div>
       </div>
